# ChangeLog for net-im/kadu-water_notify
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-water_notify-0.1.1.ebuild, -kadu-water_notify-0.1.1_p2.ebuild:
  Fixed URI.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-water_notify-0.1.1_p2.ebuild, -kadu-water_notify-0.1.1.2.ebuild:
  Fixed versioning.

  13 Mar 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-water_notify-0.1.1.2.ebuild:
  A tentative ebuild. Seems to work.
