@@ -1,3 +1,7 @@
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+DIST kadu-water_notify-0.2.tar.bz2 4861 RMD160 387fe8859efa93cc112cd49dbbd9dc4e78b55d9f SHA1 d9cee208f34df04375fbb5c3233d9be07f172cea SHA256 dcf0c770aa75bd530993f987dfa385d89b708cae61563038429128784a7fe916
 DIST water_notify-0.1.1.tar.bz2 4340 RMD160 380d07624434896de002b188a2031f7fd76d94aa SHA1 5c0038d74dfd0d0e97378ce831e871416e9e8a1f SHA256 e40052570778fff41a09fb097375af058455c4f1558f2854ea89cc8ecd37b551
-EBUILD kadu-water_notify-0.1.1.ebuild 319 RMD160 6a290c60e687a0c7ca8f93e303eb73eb597e815a SHA1 6816f4e05ebe35aadc9289d91d5b3c7ca2f35b0c SHA256 3afff22ab22219d3ace1ac3f70a7f656507b3ca5afac2b0fbbe51801e52a24e2
-MISC ChangeLog 526 RMD160 0feb900d6fc068ed93c887074e5b5e40912619de SHA1 7c4e249cf496b5a489d8775f1923cc91d0c56251 SHA256 1becce3ae7483c037a07929804974468fc9855fcdc6f33abc15da724716d6f10
+EBUILD kadu-water_notify-0.1.1.ebuild 449 RMD160 0a6d074f308c03507b9fdb8297ebb575fedef2a7 SHA1 60773885e05d43537794240cc56c5b08a5b3acd6 SHA256 2d1a96a8ff6cd83a8c692fbeedd91de38ce5ee1ea09b5f9b59eeedf2db304809
+EBUILD kadu-water_notify-0.2.ebuild 406 RMD160 2967e2b14cf3222f5f347a573d09e426c5b6e4a6 SHA1 d4c20f9f2202cf3fe1872bd73e0b318595ed252e SHA256 4f9f87d6a09f30f399fec8ec11d114153823e80bcc0212cba70202042922c5d5
+MISC ChangeLog 688 RMD160 73fdfbe08959ad48494c2db07431934019cc17e1 SHA1 9e83b5de67a19601fe5c4181da94f14abc01050f SHA256 bbcbb7e2bfb2932e19ac95fa2034cbced476ec09415c4b9bdea522dbc5ec640d
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
