@@ -1,6 +1,11 @@
 # ChangeLog for net-im/kadu-water_notify
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  kadu-water_notify-0.1.1.ebuild, +kadu-water_notify-0.2.ebuild,
+  +metadata.xml:
+  Bumped. Some repoman fixes.
 
   18 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
   +kadu-water_notify-0.1.1.ebuild, -kadu-water_notify-0.1.1_p2.ebuild:
